# sam-invoice

./: .gitignore  pyproject.toml
fixtures/: articles.json  invoices.json  products.json
sam_invoice/: app.py  cli.py  client.py  style_manager.py
sam_invoice/assets/styles/: macos.qss
sam_invoice/models/: article.py  base_crud.py  company.py  crud_article.py  crud_company.py  crud_customer.py  crud_invoice.py  crud_product.py  customer.py  database.py  invoice.py  product.py
sam_invoice/tools/: pdf_generator.py
sam_invoice/ui/: article_detail.py  articles_view.py  base_widgets.py  customer_detail.py  customer_view.py  invoice_detail.py  invoice_edit_dialog.py  invoices_view.py  menu_bar.py  product_detail.py  products_view.py  toolbar.py  widget_helpers.py
tests/: conftest.py  test_cli.py  test_client.py  test_customers.py  test_db_cli.py  test_invoice_editing.py  test_invoice_model.py  test_invoices.py  test_models.py  test_models_article.py  test_models_product.py  test_pdf_generation.py  test_products.py  test_ui_validation.py
